force-app/main/default/objects/Production_Batch_Jobs__c/Production_Batch_Jobs__c.object-meta.xml
<CustomObject>
    <label>Production Batch Job</label>
    <nameField>
        <displayFormat>PBJ-{YYYY}-{MM}-{DD}-{000}</displayFormat>
        <label>Production Batch Jobs</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Production Batch Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>