force-app/main/default/objects/Production_Batch_Jobs__c/fields/Actual_Converted_Qty__c.field-meta.xml
<CustomField>
    <fullName>Actual_Converted_Qty__c</fullName>
    <inlineHelpText>Required: Manual entry at the end of each batch job.</inlineHelpText>
    <label>Actual Completed Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>