force-app/main/default/objects/Production_Batch_Jobs__c/fields/Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Actual Start Date</label>
    <type>DateTime</type>
</CustomField>