force-app/main/default/objects/Production_Batch_Jobs__c/fields/Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>Batch_ID__c</fullName>
    <formula>IF(ISBLANK(Production_Work_Order__r.Batch_ID_New__r.Name), Production_Work_Order__r.Batch_ID__c, Production_Work_Order__r.Batch_ID_New__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Batch ID</label>
    <type>Text</type>
</CustomField>