force-app/main/default/objects/Production_Batch_Jobs__c/fields/Batch_ID_New__c.field-meta.xml
<CustomField>
    <fullName>Batch_ID_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Batch ID</label>
    <referenceTo>Harvest_Batch_Code__c</referenceTo>
    <relationshipLabel>Production Batch Jobs</relationshipLabel>
    <relationshipName>Production_Batch_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>