force-app/main/default/objects/Production_Batch_Jobs__c/fields/Break_Included__c.field-meta.xml
<CustomField>
    <fullName>Break_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if break was taken during batch job.</inlineHelpText>
    <label>Break Included</label>
    <type>Checkbox</type>
</CustomField>