force-app/main/default/objects/Production_Batch_Jobs__c/fields/Burden_Cost_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Burden_Cost_per_Unit__c</fullName>
    <formula>(22)*(1.3)*( Burden_Rate__c)/(3600)*( Cycle_Time_per_Unit__c)</formula>
    <inlineHelpText>Fully burden cost divided by end to end cycle time per unit</inlineHelpText>
    <label>Burden Cost per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>