force-app/main/default/objects/Production_Batch_Jobs__c/fields/Burden_Rate__c.field-meta.xml
<CustomField>
    <fullName>Burden_Rate__c</fullName>
    <defaultValue>3</defaultValue>
    <inlineHelpText>Burden Rate including SG&amp;A + OPEX / Direct Labor</inlineHelpText>
    <label>Burden Rate</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>