force-app/main/default/objects/Production_Batch_Jobs__c/fields/Byproduct_Weight__c.field-meta.xml
<CustomField>
    <fullName>Byproduct_Weight__c</fullName>
    <inlineHelpText>Noted Required: For Casing, Labeling. 
Manual Entry; Expressed in the UOM of New Packaged Product. Includes waste and or remaining Required Weight</inlineHelpText>
    <label>Byproduct Weight</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>