force-app/main/default/objects/Production_Batch_Jobs__c/fields/Cannabis_Weight_UOM__c.field-meta.xml
<CustomField>
    <fullName>Cannabis_Weight_UOM__c</fullName>
    <formula>TEXT( New_Packaged_Product__r.Cannabis_Weight_UOM__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required Weight UOM</label>
    <type>Text</type>
</CustomField>