force-app/main/default/objects/Production_Batch_Jobs__c/fields/Consumed_Weight_or_Qty__c.field-meta.xml
<CustomField>
    <fullName>Consumed_Weight_or_Qty__c</fullName>
    <inlineHelpText>Not Required for Casing, Labeling, Sample Conversion.
Manual Entry: Use Weight Helper Field for entry</inlineHelpText>
    <label>Consumed Weight</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>