force-app/main/default/objects/Production_Batch_Jobs__c/fields/Cycle_Time_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Time_per_Unit__c</fullName>
    <formula>(Total_Production_Time__c / Actual_Converted_Qty__c) * (60)</formula>
    <inlineHelpText>Production Time per Unit Expressed in Seconds</inlineHelpText>
    <label>E2E Time per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>