force-app/main/default/objects/Production_Batch_Jobs__c/fields/Desired_Net_Weight_or_Qty__c.field-meta.xml
<CustomField>
    <fullName>Desired_Net_Weight_or_Qty__c</fullName>
    <formula>TEXT(Production_Work_Order__r.Desired_Net_Weight_or_Qty__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Desired Net Weight or Qty</label>
    <type>Text</type>
</CustomField>