force-app/main/default/objects/Production_Batch_Jobs__c/fields/Job_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Job_Gross_Profit__c</fullName>
    <formula>( Production_Work_Order__r.Price_per_Unit__c  -  Burden_Cost_per_Unit__c) *  Actual_Converted_Qty__c</formula>
    <inlineHelpText>Calculated based on actual completed qty multiplied by price per unit divided by cost per unit.</inlineHelpText>
    <label>PBJ Gross Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>