force-app/main/default/objects/Production_Batch_Jobs__c/fields/Lunch_Included__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if lunch was taken during batch job</inlineHelpText>
    <label>Lunch Included</label>
    <type>Checkbox</type>
</CustomField>