force-app/main/default/objects/Production_Batch_Jobs__c/fields/New_Packaged_Product__c.field-meta.xml
<CustomField>
    <fullName>New_Packaged_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Packaged Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Production Batch Jobs</relationshipLabel>
    <relationshipName>Production_Batch_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>