force-app/main/default/objects/Production_Batch_Jobs__c/fields/New_UID__c.field-meta.xml
<CustomField>
    <fullName>New_UID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>UID for New Packaged Product</inlineHelpText>
    <label>New UID</label>
    <referenceTo>UID__c</referenceTo>
    <relationshipLabel>Production Batch Jobs</relationshipLabel>
    <relationshipName>Production_Batch_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>