force-app/main/default/objects/Production_Batch_Jobs__c/fields/PBJ_Revenue__c.field-meta.xml
<CustomField>
    <fullName>PBJ_Revenue__c</fullName>
    <formula>Production_Work_Order__r.Price_per_Unit__c *  Actual_Converted_Qty__c</formula>
    <label>PBJ Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>