force-app/main/default/objects/Production_Batch_Jobs__c/fields/Product_Packaged_From__c.field-meta.xml
<CustomField>
    <fullName>Product_Packaged_From__c</fullName>
    <formula>Production_Work_Order__r.Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Packaged From</label>
    <type>Text</type>
</CustomField>