force-app/main/default/objects/Production_Batch_Jobs__c/fields/Production_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Production_Work_Order__c</fullName>
    <label>Production Work Order</label>
    <referenceTo>Production_Work_Order__c</referenceTo>
    <relationshipLabel>Production Batch Jobs</relationshipLabel>
    <relationshipName>Production_Batch_Jobs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>