force-app/main/default/objects/Production_Batch_Jobs__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <formula>Purchase_Order_Line__r.Purchase_Order__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Order</label>
    <type>Text</type>
</CustomField>