force-app/main/default/objects/Production_Batch_Jobs__c/fields/Purchase_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order Line</label>
    <referenceTo>Purchase_Order_Line__c</referenceTo>
    <relationshipLabel>Production Batch Jobs</relationshipLabel>
    <relationshipName>Production_Batch_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>