force-app/main/default/objects/Production_Batch_Jobs__c/fields/PWO_Balance_Qty__c.field-meta.xml
<CustomField>
    <fullName>PWO_Balance_Qty__c</fullName>
    <formula>Production_Work_Order__r.Balance_Qty__c</formula>
    <inlineHelpText>Calculated; Remaining quantity to be packaged from Production Work Order</inlineHelpText>
    <label>PWO Balance Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>