force-app/main/default/objects/Production_Batch_Jobs__c/fields/Targeted_Batch_Qty__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Batch_Qty__c</fullName>
    <inlineHelpText>Manual Entry; Input target quantity to be completed per Production Batch Job. Not to exceed PWO Balance Qty</inlineHelpText>
    <label>Target Batch Qty</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>