force-app/main/default/objects/Production_Batch_Jobs__c/fields/Team_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Count__c</fullName>
    <inlineHelpText>Manual Entry; Input count of Team Members who participated in Production Batch Job</inlineHelpText>
    <label>Team Members</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>