force-app/main/default/objects/Production_Batch_Jobs__c/fields/Test_Required__c.field-meta.xml
<CustomField>
    <fullName>Test_Required__c</fullName>
    <formula>Production_Work_Order__r.Test_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Required</label>
    <type>Checkbox</type>
</CustomField>