force-app/main/default/objects/Production_Batch_Jobs__c/fields/Total_Burden_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Burden_Cost__c</fullName>
    <formula>Actual_Converted_Qty__c *  Burden_Cost_per_Unit__c</formula>
    <label>Burden PBJ Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>