force-app/main/default/objects/Production_Batch_Jobs__c/fields/Total_Production_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Production_Time__c</fullName>
    <formula>(Actual_Completion_Date__c - Actual_Start_Date__c) * 24 * 60 - IF( Lunch_Included__c = True, 30, 0) - IF( Break_Included__c = True, 15, 0)</formula>
    <inlineHelpText>Production Time Expressed in Minutes</inlineHelpText>
    <label>Total Production Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>