force-app/main/default/objects/Production_Batch_Jobs__c/fields/UID__c.field-meta.xml
<CustomField>
    <fullName>UID__c</fullName>
    <formula>IF( ISBLANK( Production_Work_Order__r.UID_New__r.Name ),Production_Work_Order__r.UID__c, Production_Work_Order__r.UID_New__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source UID</label>
    <type>Text</type>
</CustomField>