force-app/main/default/objects/Production_Batch_Jobs__c/fields/Weight_Helper__c.field-meta.xml
<CustomField>
    <fullName>Weight_Helper__c</fullName>
    <formula>IF(OR(
Service_Type__c = &quot;Casing&quot;,
Service_Type__c = &quot;Labeling&quot;,
Service_Type__c = &quot;Sample Conversion&quot;),
0, Targeted_Batch_Qty__c *  New_Packaged_Product__r.Cannabis_Weight__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weight Helper</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>