force-app/main/default/objects/Production_Batch_Jobs__c/fields/Yield_Factor__c.field-meta.xml
<CustomField>
    <fullName>Yield_Factor__c</fullName>
    <inlineHelpText>Manual Entry; Input yield from material quality. Expressed in percentage</inlineHelpText>
    <label>Yield (%)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>