force-app/main/default/objects/Production_Batch_Jobs__c/recordTypes/Manufacturing.recordType-meta.xml
<RecordType>
    <fullName>Manufacturing</fullName>
    <active>true</active>
    <label>Manufacturing</label>
</RecordType>