force-app/main/default/objects/Production_Batch_Jobs__c/validationRules/PBJ_Start_and_End_DateTime.validationRule-meta.xml
<ValidationRule>
    <fullName>PBJ_Start_and_End_DateTime</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISNEW(),
ISCHANGED(Actual_Completion_Date__c)
),
Actual_Completion_Date__c &lt; Actual_Start_Date__c
)</errorConditionFormula>
    <errorDisplayField>Actual_Completion_Date__c</errorDisplayField>
    <errorMessage>Actual Completion Date &amp; Time should not be less than Actual Start Date &amp; Time.</errorMessage>
</ValidationRule>