force-app/main/default/objects/Production_Batch_Jobs__c/listViews/X3_All.listView-meta.xml
<ListView>
    <fullName>X3_All</fullName>
    <columns>NAME</columns>
    <columns>Production_Work_Order__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Product_Packaged_From__c</columns>
    <columns>New_Packaged_Product__c</columns>
    <columns>PWO_Balance_Qty__c</columns>
    <columns>Actual_Start_Date__c</columns>
    <columns>Targeted_Batch_Qty__c</columns>
    <columns>Yield_Factor__c</columns>
    <columns>Required_Cannabis_Weight_or_Qty__c</columns>
    <columns>Actual_Converted_Qty__c</columns>
    <columns>Consumed_Weight_or_Qty__c</columns>
    <columns>Actual_Completion_Date__c</columns>
    <columns>Purchase_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>3. All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>